# cuda_nn

./: .gitignore  Tensor.hpp  data.csv  makefile  test.cpp  test.ipynb
client/: index.html  package-lock.json
client/src/: App.tsx
client/src/Managers/: ModelManger.ts
client/src/components/: FeatureSelector.tsx  LayerList.tsx  NewLayer.tsx
docs/: CNAME  index.html  style.css
include/: Activation.hpp  Linear.hpp  Model.hpp  Pipeline.hpp  Relu.hpp  Tensor.hpp  model.hpp
server/: app.py  requirements.txt
server/assets/: model.keras
server/core/: CMakeLists.txt  arachne.py  arachnePYTHON_wrap.cxx  arachnePYTHON_wrap.h  check.txt  cuda_nn.py  cuda_nnPYTHON_wrap.cxx  help.arachne  test.ipynb  test.py
server/core/include/: Activation.hpp  Adam.hpp  CrossEntropyLoss.hpp  Flatten.hpp  Linear.hpp  Loss.hpp  MAELoss.hpp  MSELoss.hpp  Model.hpp  Normalize.hpp  Optimizer.hpp  Pipeline.hpp  RMSProp.hpp  Relu.hpp  SGD.hpp  Softmax.hpp  Tensor.hpp  Variables.hpp  kernel.h
server/core/include/kernels/: add.cu  converFloat.cu  convertFloat.cu  divide.cu  elemMultiply.cu  flatten.cu  kernels.cu  kernels.hpp  multipy.cu  reshape.cu  scalarAdd.cu  scalarMultiply.cu  sqrt.cu  transpose.cu
server/core/interfaces/: arachne.i  cuda_nn.i
server/core/src/: kernel.cu  main.cpp  test.cpp
server/core/test/: test.py
server/endpoints/: Dataset.py  Model.py
server/utils/: FileServices.py
src/: model.cu  test.cpp
